src/blocks/Hero/Hero.scss
@import '../../../styles/mixins.scss';
@import '../../../styles/variables.scss';

$block: '.#{$ns}hero-block';

$backgroundMaxWidth: 1440px;
$intermediateBreakpoint: 993px;

@mixin media-content-styles($orientation: 'horizontal') {
    &,
    .pc-media-component-image__item,
    .pc-fullscreen-image,
    .pc-fullscreen-image__image-wrapper,
    .pc-media-component-video__wrap,
    .pc-media-component-video__react-player,
    .pc-default-video,
    .pc-ReactPlayer__preview-img,
    .pc-full-screen-media,
    .pc-full-screen-media__media-wrapper {
        @if $orientation == 'vertical' {
            width: auto;
            height: 100%;
        } @else {
            width: 100%;
            height: auto;
        }
    }

    .pc-ReactPlayer__player,
    .pc-ReactPlayer__player > video,
    .react-player__preview {
        /* stylelint-disable declaration-no-important */
        @if $orientation == 'vertical' {
            width: auto !important;
            height: 100% !important;
        } @else {
            width: 100% !important;
            height: auto !important;
        }
        /* stylelint-enable declaration-no-important */
    }
}

#{$block} {
    position: relative;

    &__background {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 50%;
        width: min($backgroundMaxWidth, 100%);
        border-radius: var(--pc-border-radius);
        transform: translateX(-50%);

        &_full-width {
            display: flex;
            justify-content: center;
            width: 100%;
            border-radius: initial;
        }

        & > div {
            width: 100%;
            height: 100%;
        }

        &-image {
            width: 100%;
            height: 100%;
        }

        &-video {
            width: 100%;
            height: 100%;

            & > video {
                width: 100%;
                height: 100%;
                object-fit: cover;
            }
        }
    }

    &__wrapper {
        position: relative;
        display: grid;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: 1fr;
        gap: $indentXS;
        padding-inline: $indentXXXS;
    }

    &__breadcrumbs {
        position: absolute;
        top: $indentXS;
        left: $indentXXXS;
        max-width: 100%;
    }

    &__content {
        grid-column: span 6;
        padding-inline-end: $indentL;

        &_vertical-offset {
            &_s {
                padding-block: $indentL;
            }

            &_m {
                padding-block: $indentXXL;
            }

            &_l {
                padding-block: $indentXXXL;
            }

            &_xl {
                padding-block: $indent4XL;
            }
        }

        &-overtitle {
            $overtitle: &;
            margin-bottom: $indentXXXS;

            &_theme {
                &_light {
                    --_--overtitle-color: var(--g-color-text-dark-primary);
                }
                &_dark {
                    --_--overtitle-color: var(--g-color-text-light-primary);
                }
            }

            &,
            .yfm_constructor {
                @include text-size(body-3);

                color: var(--_--overtitle-color);
            }
        }
    }

    &__media {
        position: relative;
        grid-column: span 6;
        padding-block: $indentXS;

        &-container {
            position: absolute;
            inset: $indentXS 0;
            display: flex;
            align-items: center;
            justify-content: center;

            &-content {
                @include media-content-styles('horizontal');

                &_vertical {
                    @include media-content-styles('vertical');
                }

                &_round-corners {
                    border-radius: var(--pc-border-radius);
                }

                .pc-ReactPlayer__player {
                    display: flex;
                }

                .pc-Media__youtube {
                    border-radius: initial;
                }

                .pc-media-component-data-lens__wrap,
                .pc-media-component-iframe {
                    margin: 0;
                }
            }
        }
    }

    @media (max-width: $intermediateBreakpoint) {
        &__content {
            grid-column: span 7;
        }

        &__media {
            grid-column: span 5;
        }
    }

    @media (max-width: map-get($gridBreakpoints, 'md')) {
        &__wrapper {
            padding-block: $indentS $indentSM;
        }

        &__breadcrumbs {
            grid-column: span 12;
            order: 1;
            position: initial;
        }

        &__content {
            grid-column: span 12;
            order: 3;
            width: 100%;
            padding-block: 0 $indentXS;
            padding-inline: 0;
        }

        &__media {
            grid-column: span 12;
            order: 2;
            width: 100%;
            padding-block: 0;

            &-container {
                position: initial;
                inset: 0;

                &-content_vertical {
                    @include media-content-styles('horizontal');
                }
            }
        }
    }
}

